# vlc-android

./: .gitignore  build.gradle  gradle.properties  settings.gradle
application/app/: build.gradle
application/donations/: build.gradle
application/live-plot-graph/: build.gradle
application/mediadb/: build.gradle
application/moviepedia/: build.gradle
application/remote-access-client/: build.gradle
application/remote-access-server/: build.gradle
application/resources/: build.gradle
application/resources/src/main/res/color/: standard_selection_control_normal_primary.xml
application/resources/src/main/res/values/: arrays.xml  attrs.xml  strings.xml
application/television/: build.gradle
application/tools/: build.gradle
application/vlc-android/: AndroidManifest.xml  build.gradle
application/vlc-android/res/menu/: action_mode_discover_feed.xml  action_mode_discover_service.xml  bottom_navigation.xml
application/vlc-android/res/xml/: preferences_audio_controls.xml
application/vlc-android/src/org/videolan/vlc/: PlaybackService.kt  StartActivity.kt
application/vlc-android/src/org/videolan/vlc/gui/: AudioPlayerContainerActivity.kt  BaseFragment.kt  ContentActivity.kt  HeaderMediaListActivity.kt  MainActivity.kt
application/vlc-android/src/org/videolan/vlc/media/: MediaUtils.kt  PlaylistManager.kt  SubscriptionEpisode.kt
application/vlc-android/src/org/videolan/vlc/util/: AccessibilityHelper.kt  ContextOption.kt  DummyMediaWrapperProvider.kt  Kextensions.kt
application/vlc-android/src/org/videolan/vlc/viewmodels/: HistoryModel.kt  MedialibraryViewModel.kt  StreamsModel.kt
buildsystem/: compile-medialibrary.sh  compile.sh
buildsystem/gitlab/: .gitlab-ci.yml
medialibrary/: build.gradle
medialibrary/jni/: AndroidMediaLibrary.cpp  AndroidMediaLibrary.h  CMakeLists.txt  medialibrary.cpp  utils.cpp  utils.h
medialibrary/src/org/videolan/medialibrary/: MLServiceLocator.java  MedialibraryImpl.java
medialibrary/src/org/videolan/medialibrary/interfaces/: Medialibrary.java
medialibrary/src/org/videolan/medialibrary/media/: DiscoverServiceImpl.java  MediaWrapperImpl.java  MlServiceImpl.java  SubscriptionImpl.java
medialibrary/src/org/videolan/medialibrary/stubs/: StubDataSource.java  StubDiscoverService.java  StubMediaWrapper.java  StubMedialibrary.java  StubMlService.java  StubSubscription.java
(+38 files in other folders)
